--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#FBFDFE" />
+    <meta name="description" content="This is the simple typing test" />
+    <meta property="og:title" content="TypeFast Typing Test" />
+    <meta property="og:url" content="https://react-type-fast.netlify.app/" />
+    <meta property="og:image" content="https://react-type-fast.netlify.app/icon.png" />
+    <meta property="og:type" content="Game" />
+    <meta
+    property="og:description"
+    content="A typing test with minimalistic user interface and controls."
+  />
     <title>TypeFast</title>
   </head>
   <body>
